# mxnetpredict

./: CMakeLists.txt  README.md
include/mxnetpredictor/: MXNetPredictor.h
source/: MXNetPredictor.cpp
test/: CMakeLists.txt  TestPredictor.cpp
test/testdata/: filter-0001.params  filter-symbol.json
